--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "react": "16.9.0",
     "react-native": "^0.62.0",
+    "react-native-base64": "0.0.2",
     "react-native-ble-plx": "^1.1.1"
   },
   "devDependencies": {
