--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "16.9.0",
     "react-native": "^0.62.0",
     "react-native-base64": "0.0.2",
-    "react-native-ble-plx": "^1.1.1"
+    "react-native-ble-plx": "^2.0.0",
+    "react-native-bluetooth-serial": "git+https://github.com/chico/react-native-bluetooth-serial.git#v1.0.0-rc2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
